styles/style.css
/* default styles start ================================  */
body {
  width: 100%;
  height: 100vh;
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  outline: 0;
}

.zils {
  color: blue;
}

.peleks {
  color: gray;
}

.izmerL {
  font-size: 20px;
}

pre {
  background: aliceblue;
  padding: 15px;
}

br {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.container {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
}
/* default styles end ================================  */

/* main block styles start ================================  */
.main {
  background-color: #f0f0f0;
  width: 100%;
  height: fit-content;
  min-height: calc(100vh - 100px);
  padding: 20px;
}

.main__inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.main__task--area {
  text-align: center;
  margin-bottom: 20px;
  width: clamp(100px, 60vw, 400px);
}

.main__area--enter {
  display: flex;
  gap: 10px;
  flex-direction: column;
  text-align: left;
}

button {
  padding: 8px 15px;
  background-color: #007bff;
  color: #fff;
  border: none;
  cursor: pointer;
  -o-transition: .2s linear;
  -webkit-transition: .2s linear;
  -moz-transition: .2s linear;
  -ms-transition: .2s linear;
  transition: .2s linear;
}



button:hover {

  background-color: #7cafe4;

}



textarea {
  margin-top: 10px;
  padding: 10px;
  max-width: 100%;
  box-sizing: border-box;
  font-size: 15px;
  resize: none;
}

.box {
  text-align: left;
  white-space: pre-wrap;
}

details {
  text-align: center;
  padding: 15px 25px;
  background-color: antiquewhite;
  border: 1px solid #f0f0f0;
  -o-border-radius: 12px;
  -webkit-border-radius: 12px;
  -moz-border-radius: 12px;
  -ms-border-radius: 12px;
  border-radius: 12px;
  word-break: break-all;
}

summary {
  font-size: clamp(6px, 6vw, 18px);
}
/* main block styles end ================================  */

/* footer block styles start ================================  */
.footer {
  width: 100%;
  height: 100px;
  background-color: #7cafe4;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
/* footer block styles start ================================  */

